--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.DicodingStory"
         tools:targetApi="31">
         <activity
+            android:name=".view.CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.PostStoryActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.SignupActivity"
             android:exported="false" />
         <activity
